--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 }
 
 :root {
-    --dark : #1f2937;
-    --light : #3882f6;
+    --dark : #15251f;
+    --light : #32c061;
     --white : #f9faf8;
     --smoke : #e5e7eb;
 }
@@ -47,18 +47,29 @@ a {
 
 .hero-container {
     display: flex;
+    justify-content: space-between;
     padding: 120px 0px 150px 0;
-    gap: 40px;
+    gap: 60px;
 }
 
 .hero-group {
-    flex-basis: 1;
+    align-self: center;
 }
 
 .hero-img-container {
     background-color: rgba(255, 255, 255, 0.189);
     width: 100%;
     border-radius: 8px;
+
+    max-height: 300px;
+    overflow: hidden;
+}
+
+.hero-img-container img {
+    object-fit: cover;
+
+    width: 100%;
+    height: 100%;
 }
 
 .hero-title {
