--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 :root {
     --dark : #15251f;
-    --light : #32c061;
+    --light : #228d46;
     --white : #f9faf8;
     --smoke : #e5e7eb;
 }
@@ -92,5 +92,51 @@ a {
     background-color: var(--light);
     font-size: 16px;
     font-weight: 600;
+}
+
+/* Section 2 */
+.section-two {
+    padding: 100px 0px;
+}
+
+.section-title {
+    text-align: center;
+    margin-bottom: 80px;
+    font-size: 36px;
+    font-weight: 800;
+}
+
+.cards {
+    display: flex;
+    max-width: 60%;
+    margin: auto;
+    justify-content:center;
+    flex-wrap: wrap;
+    gap: 60px;
+}
+
+.card {
+    width: 180px;
+}
+
+.img-container {
+    box-sizing: border-box;
+    border-radius: 8%;
+    height: 180px;
+    width: 180px;
+    border: 6px solid var(--smoke);
+    overflow: hidden;
+}
+.img-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.text {
+    margin-top: 12px;
+    text-align: center;
+    color: var(--dark);
+    line-height: 22px;
 }
 
