--- a/style.css
+++ b/style.css
@@ -212,7 +212,11 @@ a {
 
 /* Footer Section */
 .footer {
-
+    background-color: var(--dark);
+    text-align: center;
+    padding: 40px;
+    color: var(--white);
+    font-size: 16px;
 }
 .footer-text {
 
