--- a/style.css
+++ b/style.css
@@ -43,8 +43,8 @@ a {
 .header {
     display: flex;
     justify-content: space-between;
-    align-items:end;
-    padding: 16px 0px 0px 0px;
+    align-items:center;
+    padding: 20px 0px 0px 0px;
 }
 
 .logo {
