--- a/style.css
+++ b/style.css
@@ -203,10 +203,6 @@ a {
     gap: 40px;
 }
 
-.call-content {
-
-}
-
 .call-title {
     font-size: 24px;
     margin-bottom: 5px;
@@ -233,5 +229,5 @@ a {
     font-size: 16px;
 }
 .footer-text {
-
+    text-decoration: underline;
 }
